[package]
name = "solana-dutch-auction"
version = "0.1.0"
license = "MIT"
edition = "2018"
publish = false

[dependencies]
arrayref = "0.3.6"
num-derive = "0.3"
num-traits = "0.2"
# solana-cli-config = "1.7.2"
# solana-client = "1.7.2"
solana-program = "1.7.2"
# solana-sdk = "1.7.2"
spl-associated-token-account = { version = "1.0", features = ["no-entrypoint"] }
spl-token = { version = "3.1", features = ["no-entrypoint"] }
thiserror = "1.0"

[dev-dependencies]
solana-program-test = "1.6.13"
solana-sdk = "1.7.2"

[lib]
name = "dutch_auction"
crate-type = ["cdylib", "lib"]

# [[bin]]
# name = "rpc-clock"
# path = "bin/rpc-clock.rs"

[features]
no-entrypoint = []
